# pilot-langchain-pgvector

./: README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  pgvector_example.ipynb  vector_example.py
docker/: adminer-config.php  docker-compose.yaml  init.sql
